--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-buddy/ide-toolbox": "^2.2.1",
+    "@sanity/client": "^3.4.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
